# dockerized_cpp_build_example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DockerfileBuildEnv  DockerfileDeps  Makefile  README.md  install_deps.sh  main.cpp
.devcontainer/: README.md  devcontainer.json
